--- a/gb/19/10/15/n11589574.md
+++ b/gb/19/10/15/n11589574.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ytrikp332/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ytrikp332/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ytrikp332/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ytrikp332/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ytrikp332/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ytrikp332/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ytrikp332/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ytrikp332/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：台湾故宫“小时代的日常”年度大展</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150543352378-600x400.jpg" />
 <h6>台湾国立故宫博物院隆重推出年度大展“小时代的日常—一个十七世纪的生活提案”，图为展场照。（台湾故宫提供）
 </h6>
 <hr>
-<p>【大纪元2019年10月15日讯】（大纪元记者钟元台北报导）台湾国立<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E6%95%85%E5%AE%AB.md#1">故宫</a>博物院隆重推出年度大展“<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E5%B0%8F%E6%97%B6%E4%BB%A3%E7%9A%84%E6%97%A5%E5%B8%B8.md#1">小时代的日常</a>——一个十七世纪的生活提案”，尝试从古人处理身外之物的态度，回看现代的人与物的关系。</p>
-<p>台湾<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E6%95%85%E5%AE%AB.md#1">故宫</a>表示，这个展览诉说的小时代是指十七世纪而言，那是一个有趣，并且充满各种可能性的时期。以现代物质文化研究来看，既可从东西交流的角度，一窥当时探险家跋山涉水开拓航道的故事，也能从江南视线了解文人世家看似平淡，其实分外讲究质感、别有一番趣味的日常。</p>
-<figure id="attachment_11589909" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1910150509292378.jpg"><img class="size-large wp-image-11589909" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150509292378-600x450.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="600" b="450" /></a><figcaption class="wp-caption-text">铜方薰炉。（<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E6%95%85%E5%AE%AB.md#1">台湾故宫</a>提供）</figcaption></figure>
-<figure id="attachment_11589911" style="width: 190px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1910150512502378.jpg"><img class="size-large wp-image-11589911" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150512502378.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="190" b="598" /></a><figcaption class="wp-caption-text">明文从简画〈水面闻香〉。（<ahref="https://github.com/ytrikp332/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E6%95%85%E5%AE%AB.md#1">台湾故宫</a>提供）</figcaption></figure>
+<p>【大纪元2019年10月15日讯】（大纪元记者钟元台北报导）台湾国立<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%95%85%E5%AE%AB.md#1">故宫</a>博物院隆重推出年度大展“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B0%8F%E6%97%B6%E4%BB%A3%E7%9A%84%E6%97%A5%E5%B8%B8.md#1">小时代的日常</a>——一个十七世纪的生活提案”，尝试从古人处理身外之物的态度，回看现代的人与物的关系。</p>
+<p>台湾<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%95%85%E5%AE%AB.md#1">故宫</a>表示，这个展览诉说的小时代是指十七世纪而言，那是一个有趣，并且充满各种可能性的时期。以现代物质文化研究来看，既可从东西交流的角度，一窥当时探险家跋山涉水开拓航道的故事，也能从江南视线了解文人世家看似平淡，其实分外讲究质感、别有一番趣味的日常。</p>
+<figure id="attachment_11589909" aria-describedby="caption-attachment-11589909" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/1910150509292378.jpg"><img class="size-large wp-image-11589909" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150509292378-600x450.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="600" b="450" /></a><figcaption id="caption-attachment-11589909" class="wp-caption-text">铜方薰炉。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E6%95%85%E5%AE%AB.md#1">台湾故宫</a>提供）</figcaption></figure>
+<figure id="attachment_11589911" aria-describedby="caption-attachment-11589911" style="width: 190px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/1910150512502378.jpg"><img class="size-large wp-image-11589911" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150512502378.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="190" b="598" /></a><figcaption id="caption-attachment-11589911" class="wp-caption-text">明文从简画〈水面闻香〉。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E6%95%85%E5%AE%AB.md#1">台湾故宫</a>提供）</figcaption></figure>
 <p>“此次年度大展”，台湾故宫说，通过十七世纪的文徵明（1470～1559）曾孙文震亨（1586～1645）书写的《长物志》归类而出的“书画”和“器具”两个章节作为策展基础，除了重新发掘博物馆藏品蕴含的人文脉络之外，也探索古人游赏于物的点滴细节，从中梳理与之相关的交游网络，以及赏古风逐渐影响一般居家日用的面向。</p>
-<figure id="attachment_11589910" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1910150511092378.jpg"><img class="wp-image-11589910 size-medium" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150511092378-450x594.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="450" b="594" /></a><figcaption class="wp-caption-text">明 娇黄锥拱兽面纹鼎。（台湾故宫提供）</figcaption></figure>
-<figure id="attachment_11589912" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1910150513522378.jpg"><img class="size-large wp-image-11589912" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150513522378-600x450.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="600" b="450" /></a><figcaption class="wp-caption-text">明末清初 朱三松款竹雕仕女笔筒。（台湾故宫提供）</figcaption></figure>
+<figure id="attachment_11589910" aria-describedby="caption-attachment-11589910" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/1910150511092378.jpg"><img class="wp-image-11589910 size-medium" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150511092378-450x594.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="450" b="594" /></a><figcaption id="caption-attachment-11589910" class="wp-caption-text">明 娇黄锥拱兽面纹鼎。（台湾故宫提供）</figcaption></figure>
+<figure id="attachment_11589912" aria-describedby="caption-attachment-11589912" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/1910150513522378.jpg"><img class="size-large wp-image-11589912" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150513522378-600x450.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="600" b="450" /></a><figcaption id="caption-attachment-11589912" class="wp-caption-text">明末清初 朱三松款竹雕仕女笔筒。（台湾故宫提供）</figcaption></figure>
 <p>展览分成四个单元，除故宫院藏外，国家图书馆更慷慨商借包括明版《长物志》在内等的珍本图书；财团法人成阳艺术文化基金会也商借一件明代宜兴紫砂壶。单元一“文震亨与长物志”，藉由善本古籍与书画类作品，勾勒出作者的生平与交游及其作为鉴赏指南的《长物志》一书的出版与流通。单元二“文青品味”，呈现古代文人圈日常用物的样态与品评观点。</p>
-<figure id="attachment_11589959" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1910150541232378.jpg"><img class="wp-image-11589959 size-medium" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150541232378-450x1359.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="450" b="1359" /></a><figcaption class="wp-caption-text">明张宏〈寒山高逸〉轴。（台湾故宫提供）</figcaption></figure>
-<figure id="attachment_11589918" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1910150535482378.jpg"><img class="size-large wp-image-11589918" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150535482378-600x449.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="600" b="449" /></a><figcaption class="wp-caption-text">文震亨书五言律诗成扇。（台湾故宫提供）</figcaption></figure>
+<figure id="attachment_11589959" aria-describedby="caption-attachment-11589959" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/1910150541232378.jpg"><img class="wp-image-11589959 size-medium" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150541232378-450x1359.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="450" b="1359" /></a><figcaption id="caption-attachment-11589959" class="wp-caption-text">明张宏〈寒山高逸〉轴。（台湾故宫提供）</figcaption></figure>
+<figure id="attachment_11589918" aria-describedby="caption-attachment-11589918" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/1910150535482378.jpg"><img class="size-large wp-image-11589918" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150535482378-600x449.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="600" b="449" /></a><figcaption id="caption-attachment-11589918" class="wp-caption-text">文震亨书五言律诗成扇。（台湾故宫提供）</figcaption></figure>
 <p>单元三“可用之物”则以带有藏家标记的文物，呼应文震亨指出的鉴赏准则及各自的藏物类别与态度。单元四“百汇聚珍”展现物流日渐普及带动各式仿古、新创商品纷繁出呈，连带也让名家标记和作坊店号成为时尚的一环。故宫说，美感的生活疗愈了不同时代人们的心，诚挚邀请民众跟着明朝文人，细看小小的美，发现不寻常的日常，一起打造属于自己的美好小时代。</p>
-<figure id="attachment_11589913" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1910150514402378.jpg"><img class="size-large wp-image-11589913" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150514402378-600x456.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="600" b="456" /></a><figcaption class="wp-caption-text">明 宣德 青花瓷莲塘鱼藻纹花口洗。（台湾故宫提供）</figcaption></figure>
-<figure id="attachment_11589915" style="width: 445px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1910150516232378.jpg"><img class="wp-image-11589915 size-full" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150516232378.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="445" b="599" /></a><figcaption class="wp-caption-text">南宋 龙泉窑青瓷纸槌瓶。（台湾故宫提供）</figcaption></figure>
+<figure id="attachment_11589913" aria-describedby="caption-attachment-11589913" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/1910150514402378.jpg"><img class="size-large wp-image-11589913" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150514402378-600x456.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="600" b="456" /></a><figcaption id="caption-attachment-11589913" class="wp-caption-text">明 宣德 青花瓷莲塘鱼藻纹花口洗。（台湾故宫提供）</figcaption></figure>
+<figure id="attachment_11589915" aria-describedby="caption-attachment-11589915" style="width: 445px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/1910150516232378.jpg"><img class="wp-image-11589915 size-full" title="组图：台湾故宫“小时代的日常”年度大展" src="https://i.epochtimes.com/assets/uploads/2019/10/1910150516232378.jpg" alt="组图：台湾故宫“小时代的日常”年度大展" width="445" b="599" /></a><figcaption id="caption-attachment-11589915" class="wp-caption-text">南宋 龙泉窑青瓷纸槌瓶。（台湾故宫提供）</figcaption></figure>
 <h2>第一单元：文震亨与长物志</h2>
 <p>文震亨，字启美，号木鸡生。他出身自明代苏州极具影响力的文艺世家。自其曾祖父文徵明开始，文氏一族不乏以诗文书画名著一时者。文震亨为明代后期承继家族艺文传统的代表人物。他的活动范围不限于家乡苏州，亦扩至四方精英汇聚的南京、杭州等地，与众多文人交游结社，诗文酬唱。</p>
 <p>文震亨挟着苏州文氏丰厚的文化资本，将自己对琴棋书画、焚香饮馔、服饰器用、造园布景的涵养见识，汇编《长物志》一书，成为晚明文雅品味的代表指南，也透露当时风雅文士对生活各层面细腻讲究的生活态度。本单元将介绍文震亨与亲友的作品与收藏，以及他甚受欢迎的著作《长物志》之数种版本。</p>
@@ -37,48 +37,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/19/3/30/n11150983.md#1">组图：张大千120岁纪念画展</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/5/n12667507.md#1">华航证实：副机师居家检疫期外出打球</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/5/n12667129.md#1">中国发达地区限电 专家分析中共两大盘算</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12666031.md#1">苏贞昌视察海关 强调进口肉品要过三关</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12665951.md#1">蚂蚁搬象10年窃台电3千万 女课长要另赔2千万</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12666017.md#1">中共在港设文化央企 基进：抹去港人文化DNA</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12665963.md#1">防疫考量 台行政院不办大场尾牙</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12665965.md#1">最高院废除“限量分案”制 4千余积案分72法官受理</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12665969.md#1">外人新证号上路 催生者欧洲商会执行长抢头香</a></li>
-<li><a href="https://github.com/ytrikp332/djy/blob/master/gb/21/1/4/n12665978.md#1">宅男盗PTT账号扬言恐攻 IP设日仍遭逮</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/30/n11150983.md#1">组图：张大千120岁纪念画展</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689024.md#1">为妇幼发声 国民党推友善三法 主张产假延长至10周</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689026.md#1">从原民身份父母姓氏才是原民？ 台宪法法庭判决违宪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689028.md#1">谴责俄侵乌 台跨党派立委发声反侵略护儿童</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689037.md#1">北市人口跌破250万 副市长议员各再减1席</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689039.md#1">儿少在家受虐比例高 台人权会：借镜日韩禁家内体罚</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688546.md#1">台前科技副总跌山谷亡 谢金河曝1人登山惊魂记</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688994.md#1">东南水泥施工撞倒电塔 影响高铁旅客返乡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688862.md#1">助乌克兰学生来台求学 吴钊燮：讨论中</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688864.md#1">苏贞昌抛新台湾模式 防疫经济并行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/ytrikp332/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213719.md#1" target="_blank">许茹：火灾爆炸频发京城连震 昭示奸佞当道</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489082.md#1" target="_blank">反迫害20周年 34国法轮功学员伦敦集会</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/20/10/3/n12449891.md#1">《圣经》与《推背图》预言的应验与变换11</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/20/12/30/n12654008.md#1">2021年的六大预言：灾难与救赎</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/4/n12666213.md#1">【直播预告】美民众5日发起抗议大选舞弊活动</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/2/n12662574.md#1">【直播】川普乔州助选 参议员决选进入冲刺</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/4/n12664729.md#1">【直播预告】1/6美国会联席会议及大型集会</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/3/n12662991.md#1">彭斯：欢迎参众议员6日提反对意见和呈交证据</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/1/n12659957.md#1">【时事军事】挑起“灰色战争” 中共闯下大祸</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/3/n12663410.md#1">研究：新型氟电池有望代替锂电池</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/4/n12664632.md#1">赵丽颖发文宣传新剧 意外暴露用“古董”手机</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/3/n12664153.md#1">玄彬和孙艺真恋情公开 江疏影的反应笑翻网络</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/3/n12663471.md#1">台男星出道13年没红过 改名黄立今办婚宴</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/4/n12665376.md#1">《全明星》踩“蛋”拼总冠军 演唱会热闹落幕</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/3/n12663302.md#1">王心凌开唱7造型吸睛 与伍佰又唱又跳</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/3/n12663493.md#1">日本吉卜力工作室 上千张动画图片免费下载</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/2/n12662244.md#1">庚子年最后1个月会发生什么？祖传中医推演</a></li>
-<li><a href="https://github.com/pvxdru351/djy/blob/master/gb/21/1/4/n12665269.md#1">印度警察救起铁轨上的老人 再赏他耳光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ytrikp332/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ytrikp332/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/15/n11589574.htm">组图：台湾故宫“小时代的日常”年度大展</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/15/n11589574.htm">组图：台湾故宫“小时代的日常”年度大展</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ytrikp332/djy/blob/master/gb/19/10/15/n11589574.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ytrikp332/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ytrikp332/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ytrikp332/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ytrikp332/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ytrikp332/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/10/15/n11589574.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
